--- a/index.html
+++ b/index.html
@@ -4,95 +4,24 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Product-List</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"
+      integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+      crossorigin="anonymous"
+    />
     <script
-      defer
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"
+      integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+      crossorigin="anonymous"
     ></script>
-    <style>
-
-  body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 20px;
-    background-color: #f4f4f4;
-  }
-  
-  form {
-    max-width: 500px;
-    margin: 0 auto;
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  }
-  
-  label {
-    display: block;
-    margin-bottom: 5px;
-  }
-  
-  input[type="number"],
-  input[type="text"],
-  select {
-    width: 100%;
-    padding: 8px;
-    margin-bottom: 15px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-  }
-  
-  button[type="submit"] {
-    background-color: #4caf50;
-    color: white;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  
-  button[type="submit"]:hover {
-    background-color: #45a049;
-  }
-  
-  ul {
-    list-style: none;
-    padding: 0;
-  }
-  
-  h1 {
-    margin-top: 20px;
-    font-size: 18px;
-  }
-  
-  li {
-    margin-bottom: 5px;
-    padding: 8px;
-    background-color: #e6e6e6;
-    border-radius: 4px;
-  }
-  
-  button {
-    background-color: #ff3d00;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    padding: 5px 10px;
-    margin-left: 10px;
-  }
-  
-  button:hover {
-    background-color: #d32f2f;
-  }
-</style>
   </head>
   <body>
-    <form action="#" onSubmit="getOrder(event)">
+    <form action="#" onSubmit="getOrder(event)" class="container">
       <label for="Sellingprice"> Selling Price:</label>
-      <input type="number" id="Sellingprice" required />
+      <input type="number" id="Sellingprice" placeholder="Price" required />
       <label for="item"> Product-Name:</label>
-      <input type="text" id="item" required />
+      <input type="text" id="item" placeholder="Product" required />
       <label for="Category">Category:</label>
       <select id="Category" required>
         <option value="Electronics">Electronics-Item</option>
@@ -100,24 +29,25 @@
         <option value="Skincare">Skincare-Item</option>
       </select>
       <button type="submit">Add Product</button>
+      <div class="container">
+        <ul id="Electroniclist">
+          <h1>Electronics-Item</h1>
+        </ul>
 
-      <ul id="Electroniclist">
-        <h1>Electronics-Item</h1>
-      </ul>
-
-      <ul id="Foodlist">
-        <h1>Food-Item</h1>
-      </ul>
-      <ul id="Skincarelist">
-        <h1>Skincare-Item</h1>
-      </ul>
+        <ul id="Foodlist">
+          <h1>Food-Item</h1>
+        </ul>
+        <ul id="Skincarelist">
+          <h1>Skincare-Item</h1>
+        </ul>
+      </div>
     </form>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.2/axios.min.js"></script>
 
     <script>
       let orderObj;
 
-      function getOrder(e) {
+      async function getOrder(e) {
         e.preventDefault();
         const price = e.target.Sellingprice.value;
         const product = e.target.item.value;
@@ -127,31 +57,32 @@
           product: product,
           category: category,
         };
-        axios
-          .post(
-            "https://crudcrud.com/api/bcecba3a86cb49878e5c491feb916e54/orderInventory",
+
+        try {
+          const response = await axios.post(
+            'https://crudcrud.com/api/41d0130feec44f61b5da28c3cb62c096/orderInventory',
             orderObj
-          )
-          .then((res) => {
-            showData(res.data);
-          })
-          .catch((err) => console.log(err));
+          );
+          showData(response.data);
+        } catch (error) {
+          console.log(error);
+        }
       }
 
       function showData(orderObj) {
-        const li = document.createElement("li");
-        const deleteBtn = document.createElement("button");
+        const li = document.createElement('li');
+        const deleteBtn = document.createElement('button');
         let parentEle;
 
-        if (orderObj.category === "Electronics") {
-          parentEle = document.getElementById("Electroniclist");
-        } else if (orderObj.category === "Food") {
-          parentEle = document.getElementById("Foodlist");
-        } else if (orderObj.category === "Skincare") {
-          parentEle = document.getElementById("Skincarelist");
+        if (orderObj.category === 'Electronics') {
+          parentEle = document.getElementById('Electroniclist');
+        } else if (orderObj.category === 'Food') {
+          parentEle = document.getElementById('Foodlist');
+        } else if (orderObj.category === 'Skincare') {
+          parentEle = document.getElementById('Skincarelist');
         }
 
-        deleteBtn.innerHTML = "Delete Product";
+        deleteBtn.innerHTML = 'Delete Product';
         li.innerHTML = `${orderObj.price} ${orderObj.product} ${orderObj.category}`;
         li.appendChild(deleteBtn);
 
@@ -162,26 +93,26 @@
             parentEle.removeChild(li);
             axios
               .delete(
-                `https://crudcrud.com/api/bcecba3a86cb49878e5c491feb916e54/orderInventory/${orderObj._id}`
+                `https://crudcrud.com/api/41d0130feec44f61b5da28c3cb62c096/orderInventory/${orderObj._id}`
               )
-              .then(() => console.log("Order Deleted"))
-              .catch(() => console.log("Something Went wrong"));
+              .then(() => console.log('Order Deleted'))
+              .catch(() => console.log('Something Went wrong'));
           };
         }
       }
 
-      window.onload = () => {
-        axios
-          .get(
-            "https://crudcrud.com/api/bcecba3a86cb49878e5c491feb916e54/orderInventory"
-          )
-          .then((res) => {
-            res.data.forEach((data) => {
-              showData(data);
-            });
-          })
-          .catch((err) => console.log("Something Went wrong", err));
-      };
+      window.addEventListener('DOMContentLoaded', async () => {
+        try {
+          const resposne = await axios.get(
+            'https://crudcrud.com/api/41d0130feec44f61b5da28c3cb62c096/orderInventory'
+          );
+          resposne.data.forEach((data) => {
+            showData(data);
+          });
+        } catch (error) {
+          console.log(error);
+        }
+      });
     </script>
   </body>
 </html>
